the zoom overflow issue fixed

--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -28,14 +28,12 @@ header h1 {
 }
 
 
-
-
 section {
   background-color: #AAAAAA;
   border-style: solid;
   border-width: 1px;
   border-color: black;
-  height: 90px;
+  height: 100px;
 }
 
 section h1 {
@@ -52,6 +50,7 @@ section h1 {
 }
 
 section p {
+  height: 80px;
   padding: 10px;
   overflow: auto;
 }
@@ -77,7 +76,7 @@ section p {
   padding: 5px 5px 5px 5px;
 }
 
-@media only screen and (min-width: 992px) {
+@media (min-width: 992px) {
   .col_l_12 {
       width: 100%;
       float: left;
@@ -88,7 +87,7 @@ section p {
   } 
 }
 
-@media only screen and (min-width: 768px) and (max-width: 991px){
+@media (min-width: 768px) and (max-width: 991px){
   .col_m_6 {
       width: 50%;
       float: left;
